--- a/index.html
+++ b/index.html
@@ -1,33 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Todo App</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web" >
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"  />
-    <link rel="stylesheet" href="style.css">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Titillium+Web"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
     <script src="main.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="header">
-            <div class="clear">
-                <i class="fa fa-refresh" aria-hidden="true"></i>
-            </div>
-            <div id="date"></div>
+      <div class="header">
+        <div class="clear">
+          <i class="fa fa-refresh" aria-hidden="true"></i>
         </div>
-        <div class="content">
-            <ul id="list">
-             
-            </ul>
+        <div id="date"></div>
+      </div>
+      <div class="content">
+        <ul id="list"></ul>
+      </div>
+      <div class="add-item add-to-do">
+        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        <input type="text" id="input" placeholder="Add a to-do" />
+        <div class="select">
+          <select name="todos" class="filter-todo">
+            <option value="all">All</option>
+            <option value="completed">Completed</option>
+            <option value="uncompleted">Uncompleted</option>
+          </select>
         </div>
-        <div class="add-item add-to-do">
-            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            <input type="text" id="input" placeholder="Add a to-do">
-        </div>
+      </div>
     </div>
-    
-</body>
+  </body>
 </html>
